--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
             <ul>
                 <li>確定：フラスタ出す</li>
                 <li>出来そうだったら：マッスル前ちゃんの等身大パネル</li>
-                <li></li>
+                <br>
+                <br>
+                <li>参加者一覧</li>
+                <li>主催　<a href="https://x.com/nana2_pad">なーにゃ</a></li>
+                <li>演者代表　<a href="https://x.com/yuki2_nico">ゆきゆき</a></li>
+                <li>関東代表　<a href="https://x.com/Mr______25">ちゃま</a></li>
+                <li>唯一の男性陣　<a href="https://x.com/odoruwolf">僕らの街に愛がうるふ夜だ🍡</a></li>
             </ul>
         </section>
 
