--- a/index.html
+++ b/index.html
@@ -14,24 +14,25 @@
     <main>
         <section class="left-column">
             <h1>前ちゃん誕企画2025</h1>
-            <p>前ちゃん。の生誕に向けておたくが頑張る会です</p>
+            <p>前ちゃん。の生誕に向けておたくが頑張る会です。このサイト公開してる時点でｱﾚですが、本人には内緒でお願いします！！！</p>
             <ul>
                 <li>確定：フラスタ出す</li>
                 <li>出来そうだったら：マッスル前ちゃんの等身大パネル</li>
-                <br>
+                <p>↑画像待ち、入稿ギリで大丈夫そうなので一旦ステイ</p>
                 <br>
                 <li>参加者一覧</li>
                 <li>主催　<a href="https://x.com/nana2_pad">なーにゃ</a></li>
-                <li>演者代表　<a href="https://x.com/yuki2_nico">ゆきゆき</a></li>
-                <li>関東代表　<a href="https://x.com/Mr______25">ちゃま</a></li>
-                <li>唯一の男性陣　<a href="https://x.com/odoruwolf">僕らの街に愛がうるふ夜だ🍡</a></li>
+                <li><a href="https://x.com/yuki2_nico">ゆきゆき</a></li>
+                <li><a href="https://x.com/parusss0w">水上</a></li>
+                <li><a href="https://x.com/Mr______25">ちゃま</a></li>
+                <li><a href="https://x.com/odoruwolf">僕らの街に愛がうるふ夜だ🍡</a></li>
             </ul>
         </section>
 
         <section class="center-column">
             <h2>おしらせとか</h2>
-            <p>フラスタにについてはヘッダー画像のような2基連結、真ん中ベンチタイプで検討してます。</p>
-            <p>参考までに、前回の前ちゃん誕では、フラスタ約5万円ほどで作成いただきました。</p>
+            <p>フラスタについてはヘッダー画像のような2基連結、真ん中ベンチタイプで検討してます。</p>
+            <p>参考までに、前回の前ちゃん誕では、フラスタ約5万円、諸経費含めて6万円前後ほどで制作いただきました。</p>
             <p>今年は複数人ということもあり少し豪華に行きたいところですが、皆様チェキやグッズ等出費が予定されているかと存じますので、無理しすぎない程度にいきましょー</p>
             <br>
             <h2>パネルについて</h2>
@@ -46,6 +47,7 @@
             <p>不明点につきましては、<a href="https://x.com/nana2_pad">TwitterDM</a>まで</p>
             <p>出来る限り頂いたご連絡については3日以内にお返事させていただきます。</p>
             <p>もし音沙汰ない場合はお手数ではございますが、リマインドください。</p>
+            <p>ご予算等金銭に関わることや企画進捗といったデリケートな話題については、くれぐれもTwitterなど人目につくところに公開せず直接主催までご連絡をお願いいたします。</p>
         </section>
     </main>
 
@@ -54,4 +56,3 @@
     </footer>
 </body>
 </html>
-
