--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
         <section class="right-column">
             <h2>注意事項</h2>
             <p>主催なーにゃの胃を守るべく基本的にはこちらからお声がけさせていただいた方のみ参加とさせてください。</p>
-            <p>不明点につきましては、<a href="https://x.com/nana2_pad">TwitterDM</a>まで</p>
-            <p>出来る限り頂いたご連絡については3日以内にお返事させていただきます。</p>
-            <p>もし音沙汰ない場合はお手数ではございますが、リマインドください。</p>
+            <br>
             <p>ご予算等金銭に関わることや企画進捗といったデリケートな話題については、くれぐれもTwitterなど人目につくところに公開せず直接主催までご連絡をお願いいたします。</p>
+            <p>不明点につきましてはTwitterのDMグループまで</p>
+            <p>出来る限り頂いたご連絡については3日以内にお返事させていただきます。</p>
+            <p>もし音沙汰ない場合はお手数ではございますがリマインドください。主催ガチ繁忙期のため気づいてない可能性ありますほんまごめん</p>
         </section>
     </main>
 
